<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthouserental.landloardview.LandLoardPostAddActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/actionbarTitle"
                android:text="Add Post"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:onClick="landLoardPost"
                android:src="@mipmap/ic_post_list"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:onClick="gotoProfileImagePage"
                android:id="@+id/profileImage"
                android:src="@drawable/avatar"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:onClick="publishPost"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_bg"
        android:text="@string/post"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="170dp"
                android:layout_height="170dp">

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/backgroundTint"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:background="@drawable/home_icon"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/home_icon_1"
                    android:contentDescription="@string/app_name" />

            </RelativeLayout>



            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/locationAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="location"
                    android:textColor="@color/colorPrimary" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/ic_location"
                    android:tint="#d10535" />

            </LinearLayout>

            <TextView
                android:id="@+id/userName"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/homeNo"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="Enter home address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/price"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="Asking rent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/details"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="@string/enter_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Select Area :"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Select Type :"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:onClick="addImage"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/add_photo"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@mipmap/ic_add_photo"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="15dp"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>